using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class PlayerAnims
{
    public static string SW_Movement { get { return "SW_Movement"; } }
    public static string Idle { get { return "Idle"; } }
    public static string Attack { get { return "Attack"; } }
    public static string Dodge { get { return "Dodge"; } }
    public static string Block { get { return "Blocking"; } } 
    public static string CrossbowShoot { get { return "CW_Shoot"; } }
}
